# langchain_rag

./: .gitignore  README.md  pyproject.toml
src/: rag_code_review.ipynb  rag_documents.ipynb  rag_parent.ipynb
